--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Arvind Pandit",
   "license": "ISC",
   "dependencies": {
+    "prompt-sync": "^4.2.0",
     "readline": "^1.3.0"
   }
 }
